# rl-sandbox-mcp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mcp_server/: computer_use.py  grader.py  mcp_server.py  models.py  spreadsheet_engine.py
sandbox/: Dockerfile  entrypoint.sh  requirements.txt
scripts/: demo_agent.py  demo_ui.py  llm_agent.py  run_demo.sh  sandbox_manager.py
tasks/banking_reserve/: generate_task_files.py  grade.py  task.json
tasks/banking_reserve/oracle/: expected_reserves.ods
tasks/banking_reserve/starting_files/: cash_flows.ods
tasks/sales_revenue/: generate_task_files.py  grade.py  task.json
tasks/sales_revenue/oracle/: expected_revenue.ods
tasks/sales_revenue/starting_files/: sales_data.ods
tests/: test_suite.py
